# rszero

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  dev.md  dump.rdb  rustfmt.toml
.github/workflows/: ci.yml
docs/: api-reference.md  architecture.md  best-practices.md  getting-started.md  migration.md  rpc-guide.md
examples/bookstore/: Cargo.toml
examples/bookstore/api/: Cargo.toml
examples/bookstore/api/src/: main.rs
examples/bookstore/common/: Cargo.toml
examples/bookstore/common/src/: lib.rs
examples/bookstore/deploy/: docker-compose.yaml
examples/bookstore/etc/: api.yaml  book-rpc.yaml  order-rpc.yaml
examples/bookstore/idl/: book.proto  order.proto
examples/bookstore/rpc/book/: Cargo.toml
examples/bookstore/rpc/book/src/: main.rs
examples/bookstore/rpc/order/: Cargo.toml
examples/bookstore/rpc/order/src/: main.rs
examples/tenant-management/: Cargo.toml
examples/tenant-management/etc/: api.yaml
examples/tenant-management/src/: db.rs  handler.rs  main.rs  middleware.rs  model.rs  service.rs
examples/user-service/: Cargo.toml
examples/user-service/etc/: api.yaml
examples/user-service/src/: main.rs
rszero/: Cargo.toml
rszero/benches/: framework_benchmarks.rs
rszero/src/: lib.rs
rszero/src/api/: codegen.rs  lexer.rs  mod.rs  parser.rs
rszero/src/breaker/: mod.rs
rszero/src/cache/: aside.rs  lock.rs  memcache.rs  mod.rs  redlock.rs
rszero/src/cachex/: mod.rs
rszero/src/concurrent/: fx.rs  mod.rs  mr.rs  singleflight.rs
rszero/src/config/: mod.rs  types.rs  watcher.rs
rszero/src/dashboard/: data.rs  mod.rs
rszero/src/discovery/: mod.rs
rszero/src/error/: mod.rs
rszero/src/experiment/: mod.rs
rszero/src/health/: mod.rs
rszero/src/limit/: mod.rs
rszero/src/log/: mod.rs
rszero/src/metrics/: business.rs  mod.rs
rszero/src/middleware/: access_log.rs  cache.rs  canary.rs  error.rs  idempotency.rs  jwt.rs  limit.rs  log.rs  mod.rs  request_id.rs  schema.rs  signature.rs  tenant.rs  trace.rs  validation.rs
rszero/src/openapi/: mod.rs  types.rs
rszero/src/queue/: mod.rs  streams.rs  transactional.rs
rszero/src/rest/: context.rs  handler.rs  httpx.rs  mock.rs  mod.rs  param.rs  server.rs  types.rs  upload.rs  websocket.rs
rszero/src/retry/: mod.rs
rszero/src/rpc/: client.rs  interceptor.rs  mod.rs  server.rs
rszero/src/saga/: mod.rs  persistence.rs
rszero/src/scheduler/: cron.rs  mod.rs
rszero/src/shedder/: mod.rs
rszero/src/store/: batch.rs  migration.rs  mod.rs  replica.rs  sharding.rs
rszero/src/timeout/: mod.rs
rszero/src/trace/: mod.rs  propagation.rs
rszero/src/utils/: helpers.rs  masking.rs  mod.rs
rszero/src/worker/: mod.rs
rszero/tests/: integration_test.rs
rszeroctl/: Cargo.toml
rszeroctl/src/: main.rs
rszeroctl/src/cmd/: api.rs  docker.rs  env.rs  kube.rs  loadtest.rs  mod.rs  model.rs  new.rs  rpc.rs  swagger.rs  template.rs  upgrade.rs
