[workspace]
members = [
    "rszero",
    "rszeroctl",
    "examples/user-service",
    "examples/tenant-management",
]
exclude = [
    "examples/bookstore",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/your-org/rszero"

[workspace.dependencies]
# Core framework
axum = { version = "0.7", features = ["http1", "http2", "json", "macros", "matched-path", "original-uri", "tokio", "tower-log", "tracing", "ws", "multipart", "query", "form"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
volo = { version = "0.12", features = ["default"] }
volo-grpc = { version = "0.12" }
volo-thrift = { version = "0.12" }
volo-build = { version = "0.12" }
tokio = { version = "1.0", features = ["full"] }

# Config
figment = { version = "0.10", features = ["env", "toml", "yaml"] }
dotenvy = "0.15"

# Database & ORM
sqlx = { version = "0.7", features = ["postgres", "mysql", "sqlite", "runtime-tokio"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "sqlx-mysql", "sqlx-sqlite", "runtime-tokio"] }

# Cache & distributed lock
fred = { version = "6.0", features = ["serde-json"] }
dashmap = "5.5"

# Message queue
lapin = { version = "2.0" }

# Service governance
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full", "compression-br", "compression-gzip"] }
tower-governor = { package = "tower_governor", version = "0.3" }
governor = "0.6"

# Service discovery
# volo-discovery: not yet on crates.io — use etcd-client directly
etcd-client = "0.12"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
opentelemetry = { version = "0.20", features = ["trace", "metrics"] }
opentelemetry-sdk = { package = "opentelemetry_sdk", version = "0.20", features = ["trace", "metrics", "rt-tokio"] }
opentelemetry-jaeger = { version = "0.19", features = ["rt-tokio"] }

# Auth & security
jsonwebtoken = "9.0"
bcrypt = "0.15"

# Common utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
once_cell = "1.19"
async-trait = "0.1"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
fastrand = "2.0"
notify = { version = "6.1", default-features = false, features = ["macos_kqueue"] }

# Metrics
prometheus = "0.14"

# Encoding
base64 = "0.22"

# CLI (rszeroctl)
clap = { version = "4.0", features = ["derive"] }
