[workspace]
members = [
    "api",
    "rpc/book",
    "rpc/order",
    "common",
]
resolver = "2"

[workspace.package]
name = "bookstore"
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
rszero = { path = "../../../rszero" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
axum = { version = "0.7", features = ["http1", "http2", "json", "macros", "matched-path", "original-uri", "tokio", "tower-log", "tracing", "ws", "multipart", "query", "form"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
