[package]
name = "tenant-management"
version = "0.1.0"
edition = "2021"

[dependencies]
rszero = { path = "../../rszero", features = ["rest", "store", "cache", "metrics", "auth"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "limit"] }
