[package]
name = "bookstore-book-rpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bookstore-book-rpc"
path = "src/main.rs"

[dependencies]
rszero = { path = "../../../../rszero" }
bookstore-common = { path = "../../common" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
